--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "name": "Discórdia",
-
+    "description": "A comunidade de quem quer treta!",
     "stickers": [
         "http://2.bp.blogspot.com/-d21tffsTIQo/U_H9QjC69gI/AAAAAAAAKqM/wnvOyUr6a_I/s1600/Pikachu%2B2.gif",
         "https://media1.giphy.com/media/BdghqxNFV4efm/200.gif",
