--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "@skynexui/components": "^1.24.2",
     "next": "^12.0.8",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "dev": "next dev",
