--- a/config.json
+++ b/config.json
@@ -40,5 +40,16 @@
                 "999": "#000000"
             }
         }
+    },
+    "dateFormat": {
+        "year": "numeric",
+        "month": "numeric",
+        "day": "numeric",
+        "hour": "numeric",
+        "minute": "numeric",
+        "second": "numeric",
+
+        "hour12": false,
+        "timeZone": "America/Sao_Paulo"
     }
 }
