--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "license": "MIT",
   "dependencies": {
     "@skynexui/components": "^1.24.2",
+    "@supabase/supabase-js": "^1.29.4",
     "next": "^12.0.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-scrollable-feed": "^1.3.1",
     "uuid": "^8.3.2"
   },
   "scripts": {
